# app_voluntario

./: README.md
backend/nariz_encantado_api/: .env  alembic.ini  check_admin.py  nariz_encantado.db  pyproject.toml
backend/nariz_encantado_api/alembic/: env.py
backend/nariz_encantado_api/alembic/versions/: 437ae56f47ac_add_registration_link_to_event_model.py
backend/nariz_encantado_api/app/: main.py  main.py.new
backend/nariz_encantado_api/app/auth/: jwt.py
backend/nariz_encantado_api/app/database/: database.py
backend/nariz_encantado_api/app/models/: models.py
backend/nariz_encantado_api/app/routers/: admin.py  auth.py  events.py  financial.py  users.py
backend/nariz_encantado_api/app/schemas/: event.py  financial.py  user.py
backend/nariz_encantado_api/scripts/: check_admin.py  check_admin_deployed.py  create_admin.py  deploy_admin.py
frontend/nariz_encantado_web/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/nariz_encantado_web/public/css/: styles.css
frontend/nariz_encantado_web/src/: App.css  App.tsx  index.css  main.tsx
frontend/nariz_encantado_web/src/components/admin/: AdminEventManagement.tsx  (+1 more)
frontend/nariz_encantado_web/src/contexts/: AuthContext.tsx
frontend/nariz_encantado_web/src/pages/: Dashboard.tsx  EventDetail.tsx  EventRegistration.tsx  FinancialDashboard.tsx  HomePage.tsx  LoginPage.tsx
frontend/nariz_encantado_web/src/services/: api.ts
frontend/nariz_encantado_web_backup/: package-lock.json  package.json
frontend/nariz_encantado_web_backup/src/contexts/: AuthContext.tsx
(+17 files in other folders)
